--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,7 +79,8 @@ services:
       - zipkin
       - postgres
       - rabbitmq
-      - eureka-server
+      - config-server
+#      - eureka-server
   validarcliente:
     image: karcxcoding/validarcliente:latest
     container_name: validarcliente
@@ -93,7 +94,8 @@ services:
     depends_on:
       - zipkin
       - postgres
-      - eureka-server
+      - config-server
+#      - eureka-server
   notificacion:
     image: karcxcoding/notificacion:latest
     container_name: notificacion
@@ -108,7 +110,17 @@ services:
       - zipkin
       - postgres
       - rabbitmq
-      - eureka-server
+      - config-server
+#      - eureka-server
+  config-server:
+    image: karcxcoding/config-server:latest
+    container_name: config-server
+    ports:
+      - "8090:8090"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - spring
 
 networks:
   postgres:
