--- a/cliente/pom.xml
+++ b/cliente/pom.xml
@@ -90,6 +90,10 @@
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <dependency>
             <groupId>pe.com.nttdata</groupId>
             <artifactId>clientefeign</artifactId>
             <version>0.0.1-SNAPSHOT</version>
