--- a/clientefeign/src/main/resources/clientefeign-docker.properties
+++ b/clientefeign/src/main/resources/clientefeign-docker.properties
@@ -1,5 +1,6 @@
 clientefeign.cliente.url=http://cliente:8080
 clientefeign.validarcliente.url=http://validarcliente:8081
 clientefeign.notificacion.url=http://notificacion:8082
+clientefeign.notificacionkafka.url=http://notificacionkafka:8085
 # Es el nombre del contenedor
 # Nombre del servicio o aplication.name??
