--- a/clientefeign/src/main/resources/clientefeign-kube.properties
+++ b/clientefeign/src/main/resources/clientefeign-kube.properties
@@ -1,5 +1,6 @@
 clientefeign.cliente.url=http://cliente:8081
 clientefeign.validarcliente.url=http://validarcliente:8081
 clientefeign.notificacion.url=http://notificacion:8081
+clientefeign.notificacionkafka.url=http://notificacionkafka:8085
 
 # Nombre del servicio o aplication.name??
